--- a/packages/admin/src/locales/en.json
+++ b/packages/admin/src/locales/en.json
@@ -13,6 +13,8 @@
   "email or password error": "Email or Password error!",
   "nickname": "Nickname",
   "website": "Personal Website",
+  "verification code": "Verification Code",
+  "send code": "发送验证码",
   "password again": "Password Again",
   "register.login": "Login",
   "nickname illegal": "Nickname Illegal!",
@@ -81,8 +83,8 @@
   "input 2fa code": "Input Two-step verification code",
   "2fa code": "Two-step verification code",
   "forgot password": "Forgot Password",
-  "get new password": "Get a new password",
-  "you will receive an email which contains a link to create new password": "You'll receive an email which contains a link to create new password.",
+  "new password": "New Password",
+  "reset password": "Reset Password",
   "find password success! please go to your mailbox to reset it!": "The reset password email has been sent successfully, please check it in your mailbox!",
   "find password error! try again later": "Failed to send reset password email, please try again later!",
   "set administrator": "Set Admin",
