--- a/packages/admin/src/locales/zh-TW.json
+++ b/packages/admin/src/locales/zh-TW.json
@@ -13,6 +13,8 @@
   "email or password error": "帳號密碼錯誤",
   "nickname": "暱稱",
   "website": "個人網站",
+  "verification code": "驗證碼",
+  "send code": "发送验证码",
   "password again": "再次輸入密碼",
   "register.login": "使用者登入",
   "nickname illegal": "請輸入正確的暱稱",
@@ -81,8 +83,8 @@
   "input 2fa code": "填寫 6 位驗證碼",
   "2fa code": "兩步驟驗證碼",
   "forgot password": "忘記密碼",
-  "get new password": "取得新密碼",
-  "you will receive an email which contains a link to create new password": "您會收到一封包含建立新密碼連結的電子郵件。",
+  "new password": "新密碼",
+  "reset password": "重置密碼",
   "find password success! please go to your mailbox to reset it!": "重設密碼郵件發送成功，請到信箱中確認！",
   "find password error! try again later": "重設密碼郵件發送失敗，請稍後再試！",
   "set administrator": "成為管理員",
