--- a/packages/admin/src/locales/zh-CN.json
+++ b/packages/admin/src/locales/zh-CN.json
@@ -13,6 +13,8 @@
   "email or password error": "账号密码错误",
   "nickname": "昵称",
   "website": "个人网站",
+  "verification code": "验证码",
+  "send code": "发送验证码",
   "password again": "再次输入密码",
   "register.login": "用户登录",
   "nickname illegal": "请输入正确的昵称",
@@ -81,8 +83,8 @@
   "input 2fa code": "填写 6 位验证码",
   "2fa code": "两步验证码",
   "forgot password": "忘记密码",
-  "get new password": "获取新密码",
-  "you will receive an email which contains a link to create new password": "您会收到一封包含创建新密码链接的电子邮件。",
+  "new password": "新密码",
+  "reset password": "重置密码",
   "find password success! please go to your mailbox to reset it!": "重置密码邮件发送成功，请去邮箱中查收！",
   "find password error! try again later": "重置密码邮件发送失败，请稍后再试！",
   "set administrator": "成为管理员",
