--- a/packages/admin/src/locales/en.json
+++ b/packages/admin/src/locales/en.json
@@ -14,7 +14,7 @@
   "nickname": "Nickname",
   "website": "Personal Website",
   "verification code": "Verification Code",
-  "send code": "发送验证码",
+  "send code": "Send verification code",
   "password again": "Password Again",
   "register.login": "Login",
   "nickname illegal": "Nickname Illegal!",
@@ -22,8 +22,10 @@
   "setting": "Setting",
   "profile": "Profile",
   "go to gravatar to change avatar": "Go to Gravatar to change avatar",
-  "homepage": "Homepage",
-  "homepage tips": "Current users' homepage. It must be start with <1>http://</1> or <1>https://</1>.",
+  "gender": "Gender",
+  "unknown": "Unknown",
+  "male": "Male",
+  "female": "Female",
   "update my profile": "Update my profile",
   "connect to social account": "Connect to Social Account",
   "change password": "Change Password",
