--- a/packages/admin/src/locales/zh-TW.json
+++ b/packages/admin/src/locales/zh-TW.json
@@ -22,8 +22,10 @@
   "setting": "個人設定",
   "profile": "個人資料",
   "go to gravatar to change avatar": "在 Gravatar 上修改頭像",
-  "homepage": "個人首頁網址",
-  "homepage tips": "此使用者的個人首頁網址, 請用 <1>http://</1> 或 <1>https://</1> 開頭.",
+  "gender": "性別",
+  "unknown": "未知",
+  "male": "男性",
+  "female": "女性",
   "update my profile": "更新我的檔案",
   "connect to social account": "帳號綁定",
   "change password": "密碼修改",
