--- a/packages/admin/src/locales/zh-CN.json
+++ b/packages/admin/src/locales/zh-CN.json
@@ -22,8 +22,10 @@
   "setting": "个人设置",
   "profile": "个人资料",
   "go to gravatar to change avatar": "在 Gravatar 上修改头像",
-  "homepage": "个人主页地址",
-  "homepage tips": "此用户的个人主页地址, 请用 <1>http://</1> 或 <1>https://</1> 开头.",
+  "gender": "性别",
+  "unknown": "未知",
+  "male": "男性",
+  "female": "女性",
   "update my profile": "更新我的档案",
   "connect to social account": "账号绑定",
   "change password": "密码修改",
