--- a/packages/admin/src/locales/en.json
+++ b/packages/admin/src/locales/en.json
@@ -23,6 +23,7 @@
   "profile": "Profile",
   "go to gravatar to change avatar": "Go to Gravatar to change avatar",
   "gender": "Gender",
+  "homepage": "Homepage",
   "unknown": "Unknown",
   "male": "Male",
   "female": "Female",
