--- a/packages/admin/src/locales/zh-CN.json
+++ b/packages/admin/src/locales/zh-CN.json
@@ -23,6 +23,7 @@
   "profile": "个人资料",
   "go to gravatar to change avatar": "在 Gravatar 上修改头像",
   "gender": "性别",
+  "homepage": "个人主页地址",
   "unknown": "未知",
   "male": "男性",
   "female": "女性",
