--- a/packages/admin/src/locales/zh-TW.json
+++ b/packages/admin/src/locales/zh-TW.json
@@ -22,6 +22,7 @@
   "setting": "個人設定",
   "profile": "個人資料",
   "go to gravatar to change avatar": "在 Gravatar 上修改頭像",
+  "homepage": "個人首頁網址",
   "gender": "性別",
   "unknown": "未知",
   "male": "男性",
